Backport Microscoped to leverage Java 6 only.  Added tests and ported existing tests to work outside of TomEE.  Updated the domain tests to not rely on /etc/hosts entries but instead trick out localhost and 127.0.0.1.