@@ -16,16 +16,19 @@
  */
 package org.supertribe.domain;
 
-import org.apache.cxf.jaxrs.client.WebClient;
+import org.apache.http.HttpEntity;
+import org.apache.http.client.methods.CloseableHttpResponse;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.impl.client.CloseableHttpClient;
+import org.apache.http.impl.client.HttpClients;
+import org.apache.http.util.EntityUtils;
 import org.jboss.arquillian.container.test.api.Deployment;
 import org.jboss.arquillian.junit.Arquillian;
 import org.jboss.arquillian.test.api.ArquillianResource;
 import org.jboss.shrinkwrap.api.ShrinkWrap;
 import org.jboss.shrinkwrap.api.asset.ClassLoaderAsset;
-import org.jboss.shrinkwrap.api.asset.StringAsset;
 import org.jboss.shrinkwrap.api.spec.WebArchive;
 import org.junit.Assert;
-import org.junit.Ignore;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.tomitribe.microscoped.core.ScopeContext;
@@ -33,21 +36,11 @@ import org.tomitribe.microscoped.domain.DomainScopedExtension;
 
 import javax.enterprise.inject.spi.Extension;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 
 /**
  *
- * This test requires some DNS hacking.
- * Edit your /etc/hosts to contain the following entries:
- *
- * <pre>
- * $ cat /etc/hosts | egrep 'orange|red'
- * 127.0.0.1	orange
- * 127.0.0.1	red
- * </pre>
- *
- * Then comment out the @Ignore
+ * This test relies on 127.0.0.1 being different from localhost
  */
 @RunWith(Arquillian.class)
 public class DomainScopedTest extends Assert {
@@ -59,37 +52,40 @@ public class DomainScopedTest extends Assert {
                 .addPackage(ScopeContext.class.getPackage())
                 .addPackage(DomainScopedExtension.class.getPackage())
                 .addPackage(SimpleService.class.getPackage())
+                .addPackages(true, "org.apache.http")
                 .addAsWebInfResource(new ClassLoaderAsset("META-INF/beans.xml"), "classes/META-INF/beans.xml")
-                .addAsWebInfResource(new StringAsset(DomainScopedExtension.class.getName()),
-                        "classes/META-INF/services/" + Extension.class.getName()
-                );
+                .addAsServiceProviderAndClasses(Extension.class, DomainScopedExtension.class);
     }
 
     @ArquillianResource
     private URL webappUrl;
 
     @Test
-    @Ignore("Comment this out to run the test")
     public void test() throws Exception {
-        assertDomain("orange", 1);
-        assertDomain("orange", 2);
-        assertDomain("red", 1);
-        assertDomain("red", 2);
-        assertDomain("red", 3);
-        assertDomain("orange", 3);
-        assertDomain("orange", 4);
-        assertDomain("red", 4);
+        String localhost = "localhost";
+        String realHost = "127.0.0.1";
+        assertDomain(localhost, 1);
+        assertDomain(localhost, 2);
+        assertDomain(realHost, 1);
+        assertDomain(realHost, 2);
+        assertDomain(realHost, 3);
+        assertDomain(localhost, 3);
+        assertDomain(localhost, 4);
+        assertDomain(realHost, 4);
     }
 
-    private void assertDomain(String orange, int i) throws URISyntaxException {
-        final URI uri = setDomain(orange, webappUrl.toURI());
-        final WebClient webClient = WebClient.create(uri);
+    private void assertDomain(String domain, int i) throws Exception {
+        CloseableHttpClient httpclient = HttpClients.createDefault();
+        CloseableHttpResponse response = httpclient.execute(new HttpGet(createUri(domain)));
+        HttpEntity entity = response.getEntity();
+        String s = EntityUtils.toString(entity);
 
-        final String result = webClient.path("domain").get(String.class);
-        assertEquals(orange + " domain, " + i + " invocations", result);
+        final String expected = String.format("%s domain, %s invocations", domain, i);
+
+        assertEquals(expected, s);
     }
 
-    private static URI setDomain(String domain, URI uri) throws URISyntaxException {
-        return new URI(uri.getScheme(), uri.getUserInfo(), domain, uri.getPort(), uri.getPath(), uri.getQuery(), uri.getFragment());
+    private URI createUri(String domain) throws Exception{
+        return new URL(webappUrl.getProtocol(), domain, webappUrl.getPort(), webappUrl.getFile()+"domain").toURI();
     }
 }
